--- a/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
+++ b/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
@@ -54,8 +54,10 @@
         "id": "G2nk8p5gwhPg"
       },
       "source": [
+        "#Esta es la ruta absoluta; es decir, con el nodo raíz del equipo\n",
         "mainpath = \"/Users/JuanGabriel/Developer/AnacondaProjects/python-ml-course/datasets\"\n",
         "filename = \"titanic/titanic3.csv\"\n",
+        "#Pasando el directotio por un lado y el fihcero por otro\n",
         "fullpath = os.path.join(mainpath, filename)"
       ],
       "execution_count": null,
