--- a/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
+++ b/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
@@ -43,6 +43,7 @@
       "source": [
         "#Importamos las librerías que vamos a usar\n",
         "import pandas as pd\n",
+        "#OS es operating system\n",
         "import os"
       ],
       "execution_count": null,
@@ -58,6 +59,7 @@
         "mainpath = \"/Users/JuanGabriel/Developer/AnacondaProjects/python-ml-course/datasets\"\n",
         "filename = \"titanic/titanic3.csv\"\n",
         "#Pasando el directotio por un lado y el fihcero por otro\n",
+        "#Usamosla función para combinar los paths\n",
         "fullpath = os.path.join(mainpath, filename)"
       ],
       "execution_count": null,
@@ -278,6 +280,18 @@
       },
       "source": [
         "data2 = pd.read_csv(mainpath + \"/\" + \"customer-churn-model/Customer Churn Model.txt\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0xt_ay0sE7V5"
+      },
+      "source": [
+        "#Cargamos el otro archivo\r\n",
+        "data2=pd.read_csv(\"/content/Customer Churn Model.txt\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -510,6 +524,7 @@
         "outputId": "c2e3e0ac-1931-416b-e4f7-a229a6186a5b"
       },
       "source": [
+        "#Obtenemos el valor de los nombres de las columnas\r\n",
         "data2.columns.values"
       ],
       "execution_count": null,
@@ -561,6 +576,25 @@
           "execution_count": 26
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s1iileCtFz9P"
+      },
+      "source": [
+        "#Para cambiar el nombre de las columnas, pero con el archivo que nos dieron\r\n",
+        "#Primero cargamos el archivo\r\n",
+        "data_cols = pd.read_csv(\"/content/Customer Churn Columns.csv\")\r\n",
+        "#EL data set anterior lo convertimos en una lista\r\n",
+        "data_col_list = data_cols[\"Column_Names\"].tolist()\r\n",
+        "#Cargamos de nuevo el txt, pero ahora le indicamos el nombre de las columnas\r\n",
+        "data2 = pd.read_csv(\"/content/Customer Churn Model.txt\", \r\n",
+        "                    header = None, names = data_col_list)\r\n",
+        "data2.columns.values"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
