--- a/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
+++ b/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
@@ -611,7 +611,21 @@
         "id": "Z3kgiGLdwhPq"
       },
       "source": [
+        "#Open es para leer los archivos línea a línea\r\n",
         "data3 = open(mainpath + \"/\" + \"customer-churn-model/Customer Churn Model.txt\",'r')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lx4kuQukwH18"
+      },
+      "source": [
+        "#Abrimos el txt de antes\r\n",
+        "#'r' es para inidcar que es solo lecture. Otros valores son w y rw\r\n",
+        "data3=open(\"/content/Customer Churn Model.txt\", mode='r')"
       ],
       "execution_count": null,
       "outputs": []
@@ -622,6 +636,9 @@
         "id": "J1f9NViJwhPq"
       },
       "source": [
+        "#Readline es para tener todo en una string\n",
+        "#Split es para quitar los espacios en blanco\n",
+        "#Obtenemos el número de columnas\n",
         "cols = data3.readline().strip().split(\",\")\n",
         "n_cols = len(cols)"
       ],
@@ -634,8 +651,11 @@
         "id": "20TFz77NwhPr"
       },
       "source": [
+        "#Así obtenemos el número de filas\n",
+        "#Las vamos a contar\n",
         "counter = 0\n",
         "main_dict = {}\n",
+        "#Recorremos las columnas de la lista de columnas\n",
         "for col in cols:\n",
         "    main_dict[col] = []"
       ],
@@ -649,6 +669,8 @@
         "outputId": "19ea58ac-2e6d-45f0-9329-2e39fdb57cf1"
       },
       "source": [
+        "#Vamos a rellenar el diccionario\n",
+        "#Con el valor de filas y columnas\n",
         "for line in data3:\n",
         "    values = line.strip().split(\",\")\n",
         "    for i in range(len(cols)):\n",
@@ -675,6 +697,7 @@
         "outputId": "9ca44faf-6b17-49f1-f966-cf924b70498e"
       },
       "source": [
+        "#CReamos un data frame del diccionario anterior\n",
         "df3 = pd.DataFrame(main_dict)\n",
         "df3.head()"
       ],
