--- a/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
+++ b/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
@@ -697,7 +697,7 @@
         "outputId": "9ca44faf-6b17-49f1-f966-cf924b70498e"
       },
       "source": [
-        "#CReamos un data frame del diccionario anterior\n",
+        "#Creamos un data frame del diccionario anterior\n",
         "df3 = pd.DataFrame(main_dict)\n",
         "df3.head()"
       ],
@@ -940,6 +940,9 @@
         "id": "DHGk_cL5whPt"
       },
       "source": [
+        "#Con ambos ficheros abiertos (eso hace el with)\n",
+        "#Hacemos un bucle sobre las líneas, \n",
+        "#combinamos y cambiamos el separador del archivo\n",
         "with open(infile, \"r\") as infile1:\n",
         "    with open(outfile, \"w\") as outfile1:\n",
         "        for line in infile1:\n",
@@ -957,6 +960,7 @@
         "outputId": "ab9af0d7-7c5d-4ab5-8437-fedac363c88b"
       },
       "source": [
+        "#Abrimos el archivo de salida\n",
         "df4 = pd.read_csv(outfile, sep = \"\\t\")\n",
         "df4.head()"
       ],
@@ -1187,6 +1191,7 @@
         "id": "6X1QSYFcwhPv"
       },
       "source": [
+        "#Guardamos la URL\r\n",
         "medals_url = \"http://winterolympicsmedals.com/medals.csv\""
       ],
       "execution_count": null,
