--- a/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
+++ b/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
@@ -1582,6 +1582,7 @@
         "id": "fzwP7oOfwhPz"
       },
       "source": [
+        "#Utilizamos la función \"read_excel\"\r\n",
         "titanic2 = pd.read_excel(mainpath + \"/\" + filename, \"titanic3\")"
       ],
       "execution_count": null,
