--- a/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
+++ b/notebooks/T1 - 1 - Data Cleaning - Carga de datos.ipynb
@@ -1583,6 +1583,7 @@
       },
       "source": [
         "#Utilizamos la función \"read_excel\"\r\n",
+        "#El segundo parámetro es la hoja del libro de Excel\r\n",
         "titanic2 = pd.read_excel(mainpath + \"/\" + filename, \"titanic3\")"
       ],
       "execution_count": null,
@@ -1598,6 +1599,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4C8kUbW9GiFB"
+      },
+      "source": [
+        "## Escribir archivos\r\n",
+        "LAs funciones \"to\" es para crear los archivos en determinado formato. Ponemos la ruta del archivo junto con el nombre que le vamos a dar y el formato deseado"
+      ]
     },
     {
       "cell_type": "code",
