--- a/notebooks/T1 - 2 - Data Cleaning - Análisis Preliminar de los Datos.ipynb
+++ b/notebooks/T1 - 2 - Data Cleaning - Análisis Preliminar de los Datos.ipynb
@@ -88,12 +88,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v7mbt4DWSOUx",
-        "outputId": "88e2ea71-ebfa-44ff-baad-b21f7409ac4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 511
-        }
+        },
+        "id": "v7mbt4DWSOUx",
+        "outputId": "88e2ea71-ebfa-44ff-baad-b21f7409ac4b"
       },
       "source": [
         "#Head para leer las primeras n observaciones (n=10)\r\n",
@@ -628,6 +628,7 @@
         "outputId": "62801e9a-f94f-439c-f8b4-b871554e5601"
       },
       "source": [
+        "#Esta funcisón describe aquellos valores no nulos\r\n",
         "data.describe()"
       ],
       "execution_count": null,
@@ -784,6 +785,7 @@
         "outputId": "7cdcab66-54b7-4779-b0d2-8ff8c9ab7e5d"
       },
       "source": [
+        "#Para obtener el tipo de dato de las columnas\r\n",
         "data.dtypes"
       ],
       "execution_count": null,
@@ -832,6 +834,8 @@
         "outputId": "8b5ee124-91de-4df2-b945-173b24bd265a"
       },
       "source": [
+        "#Vemos si la columna de \"body\" cuenta con valores nulos\r\n",
+        "#La columna o columnas a analizar va como array\r\n",
         "pd.isnull(data[\"body\"])"
       ],
       "execution_count": null,
@@ -1004,6 +1008,7 @@
         "outputId": "a8704ca1-9831-4bdd-f105-5bf912a27ece"
       },
       "source": [
+        "#Aqui los nulos los analizamos en fila y los sumamos\r\n",
         "pd.isnull(data[\"body\"]).values.ravel().sum()"
       ],
       "execution_count": null,
@@ -1029,6 +1034,7 @@
         "outputId": "b0518290-1d4e-480c-cae8-917efa515498"
       },
       "source": [
+        "#Aquí sumamos los valores que NO son nulos\r\n",
         "pd.notnull(data[\"body\"]).values.ravel().sum()"
       ],
       "execution_count": null,
@@ -1074,6 +1080,10 @@
         "outputId": "e9d11425-48fe-4368-d9eb-2be6ea2b11c1"
       },
       "source": [
+        "#Aqui borramos la fila si todas las columnas tienen NA\r\n",
+        "#Este es el enfoque más drástico\r\n",
+        "#Axis=0 borra por filas\r\n",
+        "#axis=1, borra las columnas \r\n",
         "data.dropna(axis=0, how=\"all\")"
       ],
       "execution_count": null,
@@ -2377,6 +2387,7 @@
         "outputId": "72d5a281-4698-44d3-9770-808446a41885"
       },
       "source": [
+        "#Si alguna columna tiene NA, se va toda la fila\r\n",
         "data2.dropna(axis=0, how=\"any\")"
       ],
       "execution_count": null,
@@ -2464,6 +2475,8 @@
         "outputId": "1229bb0e-d30d-4e39-e7f9-cf5cc6ff457e"
       },
       "source": [
+        "#Rellenamos los valores faltantes con 0\r\n",
+        "#Para ello usamos \"fillna\"\r\n",
         "data3.fillna(0)"
       ],
       "execution_count": null,
@@ -3766,6 +3779,7 @@
         "id": "7G-Cbn_0SOU7"
       },
       "source": [
+        "#Reemplazamos el NA con la palabra \"desconocido\"\r\n",
         "data4= data4.fillna(\"Desconocido\")"
       ],
       "execution_count": null,
@@ -3789,6 +3803,8 @@
         "outputId": "f8f2e06a-b9a4-44ff-fe98-d6b96a87622f"
       },
       "source": [
+        "#Haciendo un reemplazo de acuerdo con la columna\n",
+        "#debemos de igualar las columnas para sobreescribirlas\n",
         "data5[\"body\"] = data5[\"body\"].fillna(0)\n",
         "data5[\"home.dest\"] = data5[\"home.dest\"].fillna(\"Desconocido\")\n",
         "data5.head(5)"
@@ -3960,6 +3976,7 @@
         "outputId": "38fc8eb5-526e-47b3-b221-8e6c05f0cf36"
       },
       "source": [
+        "#Numero de nulos en la edad\r\n",
         "pd.isnull(data5[\"age\"]).values.ravel().sum()"
       ],
       "execution_count": null,
@@ -3985,6 +4002,7 @@
         "outputId": "1ae984bd-e6bb-4a7a-c21e-5f816fa6573d"
       },
       "source": [
+        "#Rellenamos los NA con la media\r\n",
         "data5[\"age\"].fillna(data[\"age\"].mean())"
       ],
       "execution_count": null,
@@ -4096,6 +4114,7 @@
         "outputId": "6eb56e33-936d-4743-adea-52271949dda0"
       },
       "source": [
+        "#Este metodo es forwrd fill, lo que hará es reemplazar el NA con el valor siguiente\r\n",
         "data5[\"age\"].fillna(method=\"ffill\")"
       ],
       "execution_count": null,
