--- a/notebooks/T1 - 2 - Data Cleaning - Análisis Preliminar de los Datos.ipynb
+++ b/notebooks/T1 - 2 - Data Cleaning - Análisis Preliminar de los Datos.ipynb
@@ -4201,6 +4201,7 @@
         "outputId": "f426e07f-07d8-422e-963b-70fb26979807"
       },
       "source": [
+        "#Rellenamos con la observación anterior\r\n",
         "data5[\"age\"].fillna(method=\"backfill\")"
       ],
       "execution_count": null,
@@ -4330,6 +4331,8 @@
         "id": "hpGQO0nFSOU_"
       },
       "source": [
+        "#Aquí creamos las variables dummy\r\n",
+        "#Prefijo es para hacer indentificación de la variable \r\n",
         "dummy_sex = pd.get_dummies(data[\"sex\"], prefix=\"sex\")"
       ],
       "execution_count": null,
@@ -4493,6 +4496,7 @@
         "id": "fOQ_PyjOSOVA"
       },
       "source": [
+        "#Eliminamos una columna del data set\r\n",
         "data = data.drop([\"sex\"], axis = 1)"
       ],
       "execution_count": null,
@@ -4504,6 +4508,7 @@
         "id": "vkQ14AmoSOVB"
       },
       "source": [
+        "#Aqui agregamos la columna creada con las variables dummy\r\n",
         "data = pd.concat([data, dummy_sex], axis = 1)"
       ],
       "execution_count": null,
@@ -4515,6 +4520,7 @@
         "id": "_G44in7NSOVB"
       },
       "source": [
+        "#Función para crear variables dummy y concatenarlas al data set\n",
         "def createDummies(df, var_name):\n",
         "    dummy = pd.get_dummies(df[var_name], prefix=var_name)\n",
         "    df = df.drop(var_name, axis = 1)\n",
