--- a/notebooks/T2 - 1 - Data Cleaning - Data Wrangling.ipynb
+++ b/notebooks/T2 - 1 - Data Cleaning - Data Wrangling.ipynb
@@ -53,7 +53,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,23 +76,23 @@
         "#Importamos los datos\r\n",
         "data=pd.read_csv(\"/content/Customer Churn Model.txt\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Ax4sw0uKsSiI",
-        "outputId": "c6cb7a20-6b37-4b32-fa14-9df1de0a1897",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        }
+        },
+        "outputId": "c6cb7a20-6b37-4b32-fa14-9df1de0a1897"
       },
       "source": [
         "data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5274,6 +5274,7 @@
         "outputId": "5d00d72f-4e76-407f-f43c-5200120d341b"
       },
       "source": [
+        "#CReamos una semilla para que el experimento sea reproducible\n",
         "np.random.seed(2018)\n",
         "for i in range(5):\n",
         "    print(np.random.random())"
@@ -5292,6 +5293,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ADI-HCVlc0js"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
