--- a/notebooks/T2 - 3 - Data Cleaning - Agrupación de datos.ipynb
+++ b/notebooks/T2 - 3 - Data Cleaning - Agrupación de datos.ipynb
@@ -3106,6 +3106,7 @@
         "id": "AFS1lVe7oxpL"
       },
       "source": [
+        "#Lambda para rellenar los datos faltantes\r\n",
         "fill_na_mean = lambda x : x.fillna(x.mean())"
       ],
       "execution_count": null,
