--- a/notebooks/T2 - 4 - Data Cleaning - Concatenación de datos.ipynb
+++ b/notebooks/T2 - 4 - Data Cleaning - Concatenación de datos.ipynb
@@ -2984,6 +2984,8 @@
         "id": "YCsYQLfhBKGc"
       },
       "source": [
+        "#Filtramos el data set para eliminar los duplicados\r\n",
+        "#Esto se hace con \"drop_duplicates\"\r\n",
         "data_country_dp = data_country.drop_duplicates(subset=\"Athlete\")"
       ],
       "execution_count": null,
@@ -3020,6 +3022,9 @@
         "id": "qO6485uuBKGc"
       },
       "source": [
+        "#Hay que especificar el data set de la izquierda, derecha\n",
+        "#Así como las claves de izquierda y derecha\n",
+        "#si no se especifica, tenemos un inner join\n",
         "data_main_country = pd.merge(left = data_main, right = data_country_dp,\n",
         "                            left_on=\"Athlete\", right_on = \"Athlete\")"
       ],
